# hekeyman

./: CMakeLists.txt  hekeyman.cpp  test.seed.cpp
test/: CMakeLists.txt  gen.cpp  seed.cpp
